[package]
name = "gui_test"
version = "0.1.0"
authors = ["Jonathan Scanzi <kratosjon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
once_cell = "^0"
pango = "^0"
pangocairo = "^0"
cairo-rs = { version = "^0", features = ["png"] }
gstreamer = "0.15.4"
gstreamer-audio = "0.15.3"
gstreamer-player = "0.15.3"

[features]
#default = ["gtk_3_22_30"]
gtk_3_18 = ["gtk/v3_18", "gdk-pixbuf/v2_32", "gdk/v3_18", "gio/v2_46", "glib/v2_46", "pango/v1_38"] #for CI tools
gtk_3_22_30 = ["gtk_3_18", "gtk/v3_22_30", "gdk-pixbuf/v2_36", "gdk/v3_22", "gio/v2_56", "glib/v2_56", "pango/v1_42"] #for CI tools
gtk_3_24 = ["gtk_3_22_30", "gtk/v3_24", "atk/v2_30", "gdk-pixbuf/v2_36_8", "gdk/v3_24", "gio/v2_58", "glib/v2_58"] #for CI tools

[profile.release]
codegen-units = 1 # better optimizations
lto = 'fat' # Overkill lto
debug = false # do not generate debug symbols (no perf penalty but makes binary smaller)
panic = 'abort' # scales down regular rust panic handling (potentially dangerous for crates that use panics)